# glados-mecanum-server

./: Dockerfile  Dockerfile.clean  README.md  box_map prev.pgm  box_map prev.yaml  box_map.pgm  box_map.yaml  docker-compose.yaml  entrypoint.sh  frames_2024-12-16_19.38.56.gv  map_box.data  map_glados2.pgm  map_glados2.yaml  map_saved.pgm  map_saved.yaml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/jazzy-gazebo/: Dockerfile  devcontainer.json
.devcontainer/jazzy-gazebo-ab/: Dockerfile  devcontainer.json
.devcontainer/jazzy-gazebo-mac/: Dockerfile  devcontainer.json
.devcontainer/jazzy-gazebo-vnc/: Dockerfile  devcontainer.json
.devcontainer/jazzy-gazebo-wsl/: Dockerfile  devcontainer.json
.devcontainer/jazzy-nvidia-gazebo/: Dockerfile  devcontainer.json
docker/: Dockerfile  Dockerfile_old
docs/: devcontainers.md  tasks.md  todo
src/aruco_nav/: package.xml  setup.py
src/aruco_nav/aruco_nav/: aruco_nav_node.py
src/aruco_nav/srv/: GoToMarkerk.srv
src/ball_tracker/ball_tracker/: detect_ball_3d.py
src/bringup/: setup.cfg
src/glados_application/: CMakeLists.txt  package.xml
src/glados_application/src/: joint_state_publisher_node.cpp  odometry_node.cpp
src/glados_bringup/: CMakeLists.txt  package.xml
src/glados_bringup/config/: ball_tracker_params_sim.yaml  ekf.yaml  ekf_gz.yaml  glados_bridge.yaml  mapper_params_online_async.yaml  nav2_default_params.yaml  nav2_params.yaml  nav2_params_mppi_shim.yaml  rviz.rviz  twist_mux.yaml
src/glados_bringup/launch/: glados.launch.py  glados_ball_tracker.launch.py  glados_gazebo.launch.py  glados_localization_launch.py  glados_navigation_launch.py  glados_onrobot.fix.launch.py  glados_onrobot.launch.py  glados_robot.launch.py  glados_rviz.launch.py  glados_test.launch.py  glados_view_model.launch.py
src/glados_bringup/maps/: map_save.pgm  map_save.yaml  map_serial.data
src/glados_description/: CMakeLists.txt  package.xml
src/glados_description/models/glados/: car.urdf  model.config  model.sdf  model.urdf  model_test.urdf  model_test.xacro  test.sdf  test.urdf  todo.txt
src/glados_description/models/test/: model.config  model.sdf  test.sdf
src/glados_gazebo/: CMakeLists.txt  package.xml
src/glados_gazebo/worlds/: cubes.sdf  cubes_with_ball.sdf  depot.sdf  glados.sdf  glados2.sdf  perimeter.sdf
src/glados_hardware/: CMakeLists.txt  package.xml
src/glados_hardware/config/: params.yaml  teleop_params.yaml
src/glados_hardware/include/glados_hardware/: serial_gz_adapter_node.hpp
src/glados_hardware/src/: depth_camera_node.cpp  digital_voltmeter_node.cpp  serial_gz_adapter_node.cpp  serial_node.cpp  teleop_to_serial_node.cpp
src/serial_communication/src/: serial_node.cpp
