<?xml version="1.0"?>
<package format="3">
  <name>glados_hardware</name>
  <version>0.0.0</version>
  <description>ROS2 Serial Communication Package</description>
  <maintainer email="your_email@domain.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>

  <!-- <depend>librealsense2</depend> -->
  <!-- <depend>cv_bridge</depend> -->

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Add this line -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

